[package]
name = "to-offset"
description = "This crate provides developer-friendly methods to manipulate strings with character indices."
repository = "https://github.com/neilg63/to-offset"
version = "0.0.1"
edition = "2021"
categories = ["data-processing", "stream-processing", "text-manipulation"]

[dependencies]
