[package]
name = "to-offset"
description = "This crate provides developer-friendly methods to manipulate strings with character indices."
repository = "https://github.com/neilg63/to-offset"
version = "0.0.1"
edition = "2021"
categories = ["data-structures"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

[dependencies]
